Update Vendor Publish

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,16 @@
             "BubbleGenerator\\Generator\\":"src/"
         }
     },
+        "scripts": {
+        "post-install-cmd": [
+            "php artisan vendor:publish --tag=bubbleassets --force",
+            "php artisan vendor:publish --tag=bubblehelper --force"
+        ],
+        "post-update-cmd": [
+           "php artisan vendor:publish --tag=bubbleassets --force",
+           "php artisan vendor:publish --tag=bubblehelper --force"
+        ]
+    },
     "minimum-stability": "dev",
     "require": {
         "illuminate/support":"~5"
